Move portal up to avoid covering social icons

--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -16,7 +16,8 @@
     --twitter-color: #1da1f2;
     --rss-color: #f26522;
     --animation-base: ease-in-out;
-    --font-base: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
+    --font-base: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
+        Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
     --navbar-height: 80px;
 }
 
@@ -112,6 +113,10 @@ embed {
     overflow: hidden;
     width: 100%;
     border: 0;
+}
+
+iframe.gh-portal-triggerbtn-iframe {
+    bottom: 100px;
 }
 
 figure {
